<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>

    <string name="pull_to_refresh_pull_label">下拉刷新...</string>
    <string name="pull_to_refresh_release_label">释放以刷新...</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉刷新..</string>
    <string name="pull_to_refresh_updated_at_label">最近更新于: </string>
    <string name="loadmore_label">加载更多</string>
    <string name="loading_label">正在加载....</string>

    <string name="app_name">约步</string>
    <string name="progress_text">正在操作</string>
    <string name="network_offline">没有连接到网络,请连接到网络后重试</string>
    <!--title-->
    <string name="title_setting">设置</string>
    <string name="title_binding">平台绑定</string>
    <string name="title_codescan">扫一扫</string>
    <string name="title_scan_history">历史记录</string>
    <string name="title_collection">收藏</string>
    <string name="title_message">消息</string>
    <string name="title_message_detail">消息详情</string>
    <string name="title_station_list">监控</string>
    <string name="title_station_detail">电视台详情</string>
    <string name="title_host_list">设备列表</string>
    <string name="title_host_detail">设备详情</string>
    <string name="title_event_list">报警列表</string>
    <string name="title_event_type_list">报警类别列表</string>
    <string name="title_station_edit">监控定制</string>
    <!--register-->
    <string name="register_hint_username">手机号码</string>
    <string name="register_hint_nickname">昵称</string>
    <string name="register_hint_mail">邮箱</string>
    <string name="register_hint_phone">手机号码</string>
    <string name="register_hint_password">密码(6&#8211;14位字符)</string>
    <string name="register_hint_confirm">确认密码</string>
    <string name="register_register_btn">注册</string>
    <string name="register_register_btn_confirm">完成注册</string>
    <string name="register_title">注册账号</string>
    <string name="register_hint_smscode">验证码</string>
    <string name="register_sendCode_btn">获取验证码</string>

    <!-- login activity -->
    <string name="login_username_label">帐号</string>
    <string name="login_username_input_hint">手机号码</string>
    <string name="login_password_label">密码</string>
    <string name="login_password_input_hint">密码</string>
    <string name="login_btn_text">登录</string>
    <string name="login_forget_username">忘记密码?</string>
    <string name="login_register_username">注册账号</string>
    <string name="login_bottom_tip_label">使用第三方账户登录</string>
    <string name="login_username_input_empty_error">请输入用户名</string>
    <string name="login_password_input_empty_error">请输入密码</string>
    <string name="login_username_input_error">用户名含有非法字符</string>
    <string name="login_nickname_input_error">昵称含有非法字符</string>
    <string name="login_password_input_error">密码含有非法字符</string>
    <string name="login_processing">正在登录中&#8230;</string>
    <string name="login_no_network">没有连接到网络,请连接到网络后重试</string>
    <string name="login_failed">用户名或密码错误</string>
    <!-- main activity -->
    <string name="main_grid_view_item_msg_text">消息</string>
    <string name="main_grid_view_item_scan_text">扫一扫</string>
    <string name="main_grid_view_item_ask_text">问答</string>
    <string name="main_grid_view_item_bk_text">百科</string>
    <string name="main_grid_view_item_monitor_text">监控</string>
    <string name="main_grid_view_item_email_text">邮件</string>
    <string name="main_grid_view_item_update_text">更新</string>
    <string name="main_grid_view_item_notice_text">通知</string>
    <string name="main_grid_view_item_task_text">任务</string>
    <string name="main_bottom_search">搜索</string>
    <string name="main_bottom_ask">发起问题</string>
    <string name="main_bottom_setting">设置</string>
    <string name="main_bottom_quit">退出</string>
    <!-- setting window -->
    <string name="setting_window_collection">收藏</string>
    <string name="setting_window_setting">设置</string>
    <string name="setting_window_feedback">意见反馈</string>
    <string name="setting_window_login_out">注销</string>

    <string name="setting_binding">绑定</string>
    <string name="setting_unbinding">删除</string>
    <string name="setting_binding_sina">新浪微博</string>
    <string name="setting_binding_tencent">腾讯微博</string>
    <string name="setting_binding_renren">人人网</string>
    <string name="setting_binding_weixin">微信</string>
    <string name="setting_binding_qq">QQ好友</string>
    <string name="setting_binding_qzone">QQ空间</string>
    <!-- 当前版本 -->
    <string name="current_version_name">当前版本%s</string>
    <!-- sitecode scan -->
    <string name="codescan_scan_text">将二维码放入框内, 即可自动扫描</string>
    <!-- common -->
    <string name="str_c_search">搜索</string>

    <string name="header_more_monitor_edit">监控定制</string>
    <string name="header_more_monitor_home">返回首页</string>
    <string name="delete">删除</string>
    <string name="collection_empty_data_tip">快去添加感兴趣的内容吧</string>
    <string name="service_error">服务器异常,请稍后重试</string>
    <string name="time_out_error">登陆超时,请检查网络</string>
    <string name="baidu_service_error">百度分享服务器异常,请稍后重试</string>
    <string name="loading_text">正在加载中&#8230;</string>
    <string name="popup_window_collection">收藏</string>
    <string name="popup_window_cancel_collection">取消收藏</string>
    <string name="popup_window_collection_loading">正在加载网页,请稍后重试</string>
    <string name="popup_window_collection_success">收藏成功！</string>
    <string name="popup_window_collection_delete_success">删除收藏成功！</string>
    <string name="popup_window_collection_failed">收藏失败！</string>
    <string name="popup_window_collection_unloaded">网页尚未加载完成,收藏失败！</string>
    <string name="popup_window_collection_delete_failed">删除收藏失败！</string>
    <string name="popup_window_topic">发起问题</string>
    <string name="popup_window_share">分享至</string>
    <string name="popup_window_refresh">刷新</string>
    <string name="popup_window_history">历史记录</string>
    <string name="popup_window_share_success">分享成功</string>
    <string name="check_version_no_version">已经是最新版本!</string>
    <string name="empty_data_text">没有找到数据</string>
    <!-- monitor -->
    <string name="monitor_station_desc">共监控%1$d台设备,在线%2$d台,离线%3$d台,异常报警0台</string>
    <string name="monitor_station_desc_default">共监控0台设备,在线0台,离线0台,异常报警0台</string>
    <string name="monitor_host_list_size">共监控%s台设备</string>
    <string name="monitor_host_list_size_default">共监控0台设备</string>
    <string name="monitor_host_list_size_desc">在线%1$d台,离线%2$d台</string>
    <string name="monitor_host_list_size_desc_default">在线0台,离线0台</string>
    <string name="monitor_host_event_count_desc">失败:%1$d,错误:%2$d,警报:%3$d,注意:%4$d,未知:%5$d,修复:%6$d,通知:%7$d,未处理:%8$d,忽略:%9$d,已处理:%10$d</string>
    <string name="monitor_host_event_count_desc_default">失败:0,错误:0,警报:0,注意:0,未知:0,修复:0,通知:0,未处理:0,忽略:0,已处理:0</string>
    <string name="monitor_fast_search_text_hint">搜索</string>

    <string name="host_detail_name">名称:%s</string>
    <string name="host_detail_key">标示:%s</string>
    <string name="host_detail_ip">本机IP地址:%s</string>
    <string name="host_detail_system">系统:%s</string>
    <string name="host_detail_status">状态:%s</string>
    <string name="host_detail_location">位置:%s</string>
    <string name="host_detail_events">事件:异常0,警告0,通知0,修复0</string>
    <string name="host_detail_cpu_use_percent">CPU使用率:%s%%</string>
    <string name="host_detail_ram_use_percent">内存占用:%s%%</string>
    <string name="host_detail_disk_use_percent">储存占用:%s%%</string>
    <string name="host_detail_process_count">进程数量:%s</string>
    <string name="host_detail_cpu_speed">CPU速度MHZ:%s</string>
    <string name="host_detail_cpu_count">CPU数量:%s</string>
    <string name="host_detail_ram_size">内存大小:%sG</string>
    <string name="host_detail_disk_size">存储大小:%sG</string>
    <string name="host_detail_enable_disk_size">可用存储:%sG</string>
    <string name="host_detail_disk_detail">%1$s盘:总大小:%2$sG 已使用:%3$sG 剩余%4$sG</string>
    <!-- 消息 -->
    <string name="message_notice_title">公告</string>
    <string name="message_message_title">消息</string>
    <string name="monitor_notify_content">你有新的报警信息</string>
    <!--反馈-->
    <string name="feedback_error_phone">请输入您联系方式</string>
    <string name="feedback_error_content">请输入您的意见</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_commit">递交</string>
    <string name="feedback_phone">请留下您的联系方式(电话,QQ,邮箱)</string>
    <string name="feedback_content">你有什么想说的或者想问的尽管来咆哮吧</string>
    <string name="date_picker_title">日期选择</string>
    <string name="common_dialog_empty">清空</string>
</resources>
