<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
    <TextView style="@style/popupWindowStyle"
              android:id="@+id/popup_window_edit"
              android:text="@string/header_more_monitor_edit"
              android:visibility="gone"/>
    <TextView style="@style/popupWindowStyle"
              android:id="@+id/popup_window_history"
              android:text="@string/popup_window_history"
              android:visibility="gone"/>
    <TextView style="@style/popupWindowStyle"
              android:id="@+id/popup_window_home"
              android:text="@string/header_more_monitor_home"/>
</LinearLayout>