<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="@dimen/setting_window_width"
              android:layout_height="match_parent"
              android:background="@color/setting_window_bg">
    <RelativeLayout style="@style/MainSettingItemTopStyle">
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginTop="20dp"
                   android:visibility="gone"
                   android:background="@drawable/main_setting_edit_icon"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/setting_window_account_item"
                  android:drawableTop="@drawable/main_setting_photo_default_icon"
                  android:drawablePadding="15dip"
                  android:gravity="center"
                  android:layout_centerVertical="true"
                  android:layout_centerHorizontal="true"
                  android:textColor="@color/gray_b6"
                  android:textSize="18sp"/>
    </RelativeLayout>
    <View style="@style/MainSettingLineStyle"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView style="@style/MainSettingItemStyle"
                  android:id="@+id/setting_window_collection_item"
                  android:layout_weight="1"
                  android:drawableLeft="@drawable/main_setting_collection_selector"
                  android:text="@string/setting_window_collection"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:layout_marginRight="35dip"
                  android:textColor="@color/white"
                  android:gravity="center"
                  android:visibility="gone"
                  android:background="@drawable/main_setting_collection_num_bg"/>
    </LinearLayout>
    <View style="@style/MainSettingLineStyle"/>

    <TextView style="@style/MainSettingItemStyle"
              android:id="@+id/setting_window_setting_item"
              android:drawableLeft="@drawable/main_setting_setting_selector"
              android:text="@string/setting_window_setting"/>
    <View style="@style/MainSettingLineStyle"/>

    <TextView style="@style/MainSettingItemStyle"
              android:id="@+id/setting_window_feedback_item"
              android:drawableLeft="@drawable/main_setting_feedback_selector"
              android:text="@string/setting_window_feedback"/>
    <View style="@style/MainSettingLineStyle"/>
</LinearLayout>